redhatframework-app.mdapi/objects/Trigger_Management_Entry__mdt.object
<CustomObject>
    <description>This is a set of entries to manage the order of trigger operations, and which methods are active.</description>
    <label>Trigger Management Entry</label>
    <pluralLabel>Trigger Management Entries</pluralLabel>
    <fields>
        <fullName>After_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Undelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Undelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Name of callable trigger class.</description>
        <label>Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Object__c</fullName>
        <description>This is the trigger object, when it can be assigned as an entity</description>
        <inlineHelpText>This is the trigger object, when it can be assigned as an entity</inlineHelpText>
        <label>Entity Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Trigger_Management_Entries1</relationshipLabel>
        <relationshipName>Trigger_Management_Entries1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Non_Entity_Object__c</fullName>
        <description>This is the trigger object when it cannot be assigned as an Entity.</description>
        <inlineHelpText>This is the trigger object when it cannot be assigned as an Entity.</inlineHelpText>
        <label>Non-Entity Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>Controls the order of invocation.  Lowest number first.</description>
        <label>Sequence Number</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Only_one_Target</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(ISBLANK(TEXT(Non_Entity_Object__c)),ISBLANK(Entity_Object__r.QualifiedApiName)))</errorConditionFormula>
        <errorDisplayField>Non_Entity_Object__c</errorDisplayField>
        <errorMessage>Cannot specify both a target entity and a non-target entity.</errorMessage>
    </validationRules>
    <listViews>
        <fullName>Account</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Entity_Object__c</columns>
        <columns>Non_Entity_Object__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>After_Delete__c</columns>
        <columns>After_Insert__c</columns>
        <columns>After_Undelete__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>Class_Name__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Attachment</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Entity_Object__c</columns>
        <columns>Non_Entity_Object__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>After_Delete__c</columns>
        <columns>After_Insert__c</columns>
        <columns>After_Undelete__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>Class_Name__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Non_Entity_Object__c</field>
            <operation>equals</operation>
            <value>Attachment</value>
        </filters>
        <label>Attachment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Case</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Entity_Object__c</columns>
        <columns>Non_Entity_Object__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>After_Delete__c</columns>
        <columns>After_Insert__c</columns>
        <columns>After_Undelete__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>Class_Name__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Object__c</field>
            <operation>equals</operation>
            <value>Case</value>
        </filters>
        <label>Case</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contact</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Entity_Object__c</columns>
        <columns>Non_Entity_Object__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>After_Delete__c</columns>
        <columns>After_Insert__c</columns>
        <columns>After_Undelete__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>Class_Name__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Object__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Contact</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contract</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Entity_Object__c</columns>
        <columns>Non_Entity_Object__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>After_Delete__c</columns>
        <columns>After_Insert__c</columns>
        <columns>After_Undelete__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>Class_Name__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Object__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>Contract</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opportunity</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Entity_Object__c</columns>
        <columns>Non_Entity_Object__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>After_Delete__c</columns>
        <columns>After_Insert__c</columns>
        <columns>After_Undelete__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>Class_Name__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Object__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>Opportunity</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Entity_Object__c</columns>
        <columns>Non_Entity_Object__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>After_Delete__c</columns>
        <columns>After_Insert__c</columns>
        <columns>After_Undelete__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>Class_Name__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Non_Entity_Object__c</field>
            <operation>equals</operation>
            <value>Test</value>
        </filters>
        <label>Test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>View_All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Entity_Object__c</columns>
        <columns>Non_Entity_Object__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>After_Delete__c</columns>
        <columns>After_Insert__c</columns>
        <columns>After_Undelete__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>Class_Name__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>View All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>